# internal/interface/dto/res/business_instagram.go
@@ -6,9 +6,11 @@ type BusinessInstagram struct {
 	ID            int       `json:"id"`
 	Name          string    `json:"name"`
 	BusinessName  string    `json:"business_name"`
+	BusinessTitle string    `json:"business_title"`
 	InstagramID   string    `json:"instagram_id"`
 	InstagramName string    `json:"instagram_name"`
 	Memo          string    `json:"memo"`
+	MapsURL       string    `json:"maps_url"`
 	StartDate     time.Time `json:"start_date"`
 	Status        int       `json:"status"`
 	CreatedAt     time.Time `json:"created_at"`
@@ -18,4 +20,32 @@ type BusinessInstagram struct {
 type BusinessInstagramList struct {
 	BusinessInstagramList []BusinessInstagram `json:"business_instagram_list"`
 	Paginate
+}
+
+type BusinessInstagramDetail struct {
+	ID            int         `json:"id"`
+	Name          string      `json:"name"`
+	BusinessName  string      `json:"business_name"`
+	BusinessTitle string      `json:"business_title"`
+	InstagramID   string      `json:"instagram_id"`
+	InstagramName string      `json:"instagram_name"`
+	Memo          string      `json:"memo"`
+	MapsURL       string      `json:"maps_url"`
+	StartDate     time.Time   `json:"start_date"`
+	Status        int         `json:"status"`
+	CreatedAt     time.Time   `json:"created_at"`
+	UpdatedAt     time.Time   `json:"updated_at"`
+	GooglePosts   GooglePosts `json:"google_posts"`
+}
+
+type GooglePosts struct {
+	GooglePosts []GooglePost `json:"google_posts"`
+	Paginate
+}
+
+type GooglePost struct {
+	GoogleURL    string    `json:"google_url"`
+	InstagramURL string    `json:"instagram_url"`
+	CreatedAt    time.Time `json:"created_at"`
+	PostType     string    `json:"post_type"`
 }
